(#193) fixed layout issues with ie

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -19,6 +19,7 @@ $ub-heading-txt: #555;
 $ub-txt: #666;
 $ub-txt-dark: #333;
 $ub-label-bg: #777099;
+$ub-subscribe-txt: #2f2940;
 
 // gradient d9d9d9 to c4c3c4
 $ub-gray-gradient: linear-gradient(to bottom, #d9d9d9, #c4c3c4);
