--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -103,7 +103,7 @@ $c-hp-math-gradient: rgba(map-get($ub-colorcodes, math-base), .9);
       @include txt-element(media-text);
       @include add-gutter;
       color: $ub-white;
-      flex: 1 1 0px;
+      flex: 1 1 auto;
     }
 
     @include m(ela) {
